# StartLib

./: .gitmodules  CMakeLists.txt
CMakeTools/: CopyResources.cmake  GroupingTools.cmake
tests/: CMakeLists.txt  main.cpp
